--- a/index.html
+++ b/index.html
@@ -1,4 +1,22 @@
-<h1>Teste de pagina</h1>
-<php>
-  include("/workspaces/Airplane/WebSite/index.php");
-</php>
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Teste de página</title>
+  <style>
+    body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; margin: 0; padding: 24px; }
+    h1 { margin: 0 0 16px; }
+    .content { padding: 16px; border: 1px solid #ddd; border-radius: 8px; }
+  </style>
+</head>
+<body>
+  <h1>Teste de pagina</h1>
+
+  <div class="content">
+    <?php
+      include "/workspaces/Airplane/WebSite/index.php";
+    ?>
+  </div>
+</body>
+</html>
