--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <div class="content">
     <?php
-      include "/workspaces/Airplane/WebSite/index.php";
+      include "/WebSite/index.php";
     ?>
   </div>
 </body>
